--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="lib/bootstrap5/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="assets/plugins/bootstrap5/bootstrap.min.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
     <title>Document 2</title>
 </head>
 <body>
 <main class="wrapper-achievement">
     <div class="container">
-        <img src="./img/bg-game.png" class="bg-achievement" width="500px" height="500px" alt="">
+        <img src="assets/images/bg-game.png" class="bg-achievement" width="500px" height="500px" alt="">
         <div class="section-achievement">
             <div class="section-achievement__item">
                 <div class="section-achievement__heading">
                     <div class="section-achievement__logo">
-                        <img src="./img/logo.svg" width="56px" height="56px" alt="Logo">
+                        <img src="assets/images/logo.svg" width="56px" height="56px" alt="Logo">
                     </div>
                     <h5 class="section-achievement__title section-heading">
                         Bnails End Of Year Ranking 2023!
@@ -45,11 +45,11 @@
                     <div class="section-achievement__table">
                         <div class="achievement-table__one achievement-table__column position-relative ">
                             <div class="header-fireworks">
-                                <img src="./img/phao1.gif" alt="">
+                                <img src="assets/images/phao1.gif" alt="">
                             </div>
                             <div class="table-column__header">
                                 <div class="header-avatar">
-                                    <img src="./img/img-1.svg" width="64" height="64" alt="Avatar">
+                                    <img src="assets/images/img-1.svg" width="64" height="64" alt="Avatar">
                                 </div>
                                 <div class="header-heading">
                             <span class="name">
@@ -61,7 +61,7 @@
                                 </div>
                             </div>
                             <div class="table-column__column">
-                                <img src="./img/layer.svg" class="layer" height="25" width="135" alt="">
+                                <img src="assets/images/layer.svg" class="layer" height="25" width="135" alt="">
                                 <div class="column">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="135" height="131"
                                          viewBox="0 0 135 131" fill="none">
@@ -80,13 +80,13 @@
                         </div>
                         <div class="achievement-table__two achievement-table__column position-relative ">
                             <div class="header-fireworks">
-                                <img src="./img/phao2.gif" alt="">
+                                <img src="assets/images/phao2.gif" alt="">
                             </div>
                             <div class="table-column__header">
                                 <div class="header-avatar">
-                                    <img src="./img/img-1.svg" width="64" height="64" alt="Avatar">
+                                    <img src="assets/images/img-1.svg" width="64" height="64" alt="Avatar">
                                     <div class="header-cup">
-                                        <img src="./img/cup-bac.svg" width="50" height="42" alt="">
+                                        <img src="assets/images/cup-bac.svg" width="50" height="42" alt="">
                                     </div>
                                 </div>
                                 <div class="header-heading">
@@ -99,7 +99,7 @@
                                 </div>
                             </div>
                             <div class="table-column__column">
-                                <img src="./img/layer.svg" class="layer" height="25" width="135" alt="">
+                                <img src="assets/images/layer.svg" class="layer" height="25" width="135" alt="">
                                 <div class="column">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="135" height="256"
                                          viewBox="0 0 135 256" fill="none">
@@ -120,9 +120,14 @@
                         <div class="achievement-table__three achievement-table__column position-relative ">
                             <div class="table-column__header">
                                 <div class="header-avatar">
-                                    <img src="./img/img-1.svg" width="64" height="64" alt="Avatar">
+                                    <img src="assets/images/img-1.svg" width="64" height="64" alt="Avatar">
+                                    <div class="header-avatar__decor">
+                                        <img src="assets/images/sunshine.png" class="decor-1" width="288" height="238" alt="">
+                                        <img src="assets/images/star.gif" class="decor-2" width="500" height="225" alt="">
+                                        <img src="assets/images/star.gif" class="decor-3" width="500" height="225" alt="">
+                                    </div>
                                     <div class="header-cup">
-                                        <img src="./img/cup-vang.svg" width="50" height="42" alt="">
+                                        <img src="assets/images/cup-vang.svg" width="50" height="42" alt="">
                                     </div>
                                 </div>
                                 <div class="header-heading">
@@ -135,7 +140,7 @@
                                 </div>
                             </div>
                             <div class="table-column__column">
-                                <img src="./img/layer-3.svg" class="layer" height="25" width="135" alt="">
+                                <img src="assets/images/layer-3.svg" class="layer" height="25" width="135" alt="">
                                 <div class="column">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="135" height="376"
                                          viewBox="0 0 135 376" fill="none">
@@ -155,13 +160,13 @@
                         </div>
                         <div class="achievement-table__four achievement-table__column position-relative ">
                             <div class="header-fireworks">
-                                <img src="./img/phao2.gif" alt="">
+                                <img src="assets/images/phao2.gif" alt="">
                             </div>
                             <div class="table-column__header">
                                 <div class="header-avatar">
-                                    <img src="./img/img-1.svg" width="64" height="64" alt="Avatar">
+                                    <img src="assets/images/img-1.svg" width="64" height="64" alt="Avatar">
                                     <div class="header-cup">
-                                        <img src="./img/cup-dong.svg" width="50" height="42" alt="">
+                                        <img src="assets/images/cup-dong.svg" width="50" height="42" alt="">
                                     </div>
                                 </div>
                                 <div class="header-heading">
@@ -174,7 +179,7 @@
                                 </div>
                             </div>
                             <div class="table-column__column">
-                                <img src="./img/layer-2.svg" class="layer" height="25" width="135" alt="">
+                                <img src="assets/images/layer-2.svg" class="layer" height="25" width="135" alt="">
                                 <div class="column">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="135" height="256"
                                          viewBox="0 0 135 256" fill="none">
@@ -194,11 +199,11 @@
                         </div>
                         <div class="achievement-table__five achievement-table__column position-relative ">
                             <div class="header-fireworks">
-                                <img src="./img/phao1.gif" alt="">
+                                <img src="assets/images/phao1.gif" alt="">
                             </div>
                             <div class="table-column__header">
                                 <div class="header-avatar">
-                                    <img src="./img/img-1.svg" width="64" height="64" alt="Avatar">
+                                    <img src="assets/images/img-1.svg" width="64" height="64" alt="Avatar">
                                 </div>
                                 <div class="header-heading">
                             <span class="name">
@@ -210,7 +215,7 @@
                                 </div>
                             </div>
                             <div class="table-column__column">
-                                <img src="./img/layer-2.svg" class="layer" height="25" width="135" alt="">
+                                <img src="assets/images/layer-2.svg" class="layer" height="25" width="135" alt="">
                                 <div class="column">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="135" height="131"
                                          viewBox="0 0 135 131" fill="none">
@@ -237,7 +242,7 @@
                             <div class="charts-item">
                                 <div class="charts-item__inner">
                                     <div class="chats-item__avatar">
-                                        <img src="./img/img-1.svg" width="64" height="64" alt="Avatar">
+                                        <img src="assets/images/img-1.svg" width="64" height="64" alt="Avatar">
                                     </div>
                                     <div class="chats-item__content">
                                         <div class="title">
@@ -249,14 +254,14 @@
                                     </div>
                                 </div>
                                 <div class="chart-item__cup">
-                                    <img src="./img/cup-vang.svg" class="image-cup" height="42" width="50" alt="">
+                                    <img src="assets/images/cup-vang.svg" class="image-cup" height="42" width="50" alt="">
                                 </div>
-                                <img src="./img/phaohoa.svg" class="image-decor" height="80" width="92" alt="">
+                                <img src="assets/images/phaohoa.svg" class="image-decor" height="80" width="92" alt="">
                             </div>
                             <div class="charts-item">
                                 <div class="charts-item__inner">
                                     <div class="chats-item__avatar">
-                                        <img src="./img/img-1.svg" width="64" height="64" alt="Avatar">
+                                        <img src="assets/images/img-1.svg" width="64" height="64" alt="Avatar">
                                     </div>
                                     <div class="chats-item__content">
                                         <div class="title">
@@ -268,13 +273,13 @@
                                     </div>
                                 </div>
                                 <div class="chart-item__cup">
-                                    <img src="./img/cup-bac.svg" class="image-cup" height="42" width="50" alt="">
+                                    <img src="assets/images/cup-bac.svg" class="image-cup" height="42" width="50" alt="">
                                 </div>
                             </div>
                             <div class="charts-item">
                                 <div class="charts-item__inner">
                                     <div class="chats-item__avatar">
-                                        <img src="./img/img-1.svg" width="64" height="64" alt="Avatar">
+                                        <img src="assets/images/img-1.svg" width="64" height="64" alt="Avatar">
                                     </div>
                                     <div class="chats-item__content">
                                         <div class="title">
@@ -286,13 +291,13 @@
                                     </div>
                                 </div>
                                 <div class="chart-item__cup">
-                                    <img src="./img/cup-dong.svg" class="image-cup" height="42" width="50" alt="">
+                                    <img src="assets/images/cup-dong.svg" class="image-cup" height="42" width="50" alt="">
                                 </div>
                             </div>
                             <div class="charts-item">
                                 <div class="charts-item__inner">
                                     <div class="chats-item__avatar">
-                                        <img src="./img/img-1.svg" width="64" height="64" alt="Avatar">
+                                        <img src="assets/images/img-1.svg" width="64" height="64" alt="Avatar">
                                     </div>
                                     <div class="chats-item__content">
                                         <div class="title">
@@ -307,7 +312,7 @@
                             <div class="charts-item">
                                 <div class="charts-item__inner">
                                     <div class="chats-item__avatar">
-                                        <img src="./img/img-1.svg" width="64" height="64" alt="Avatar">
+                                        <img src="assets/images/img-1.svg" width="64" height="64" alt="Avatar">
                                     </div>
                                     <div class="chats-item__content">
                                         <div class="title">
@@ -324,9 +329,15 @@
                 </div>
             </div>
             <div class="section-achievement__item">
-                <h5 class="section-heading section-charts__heading-2">
-                    List stylist
-                </h5>
+                <div class="d-flex align-items-center justify-content-between">
+                    <h5 class="section-heading section-charts__heading-2">
+                        List stylist
+                    </h5>
+                    <div class="charts-list-2__title d-md-none d-flex">
+                        Total 100 stylist
+                    </div>
+                </div>
+
                 <div class="section-charts__list-2">
                     <div class="charts-item-2">
                         <div class="charts-2__number">
@@ -334,7 +345,7 @@
                         </div>
                         <div class="charts-2__inner">
                              <div class="charts-2__avatar">
-                                    <img src="./img/img-1.svg" width="56" height="56" alt="">
+                                    <img src="assets/images/img-1.svg" width="56" height="56" alt="">
                              </div>
                             <div class="charts-2__heading">
                                 <div class="charts-2__title">
@@ -342,7 +353,7 @@
                                 </div>
                                 <div class="charts-2__address">
                                     <span class="charts-2__location">
-                                        <img src="./img/location.svg" width="21" height="11" alt="">
+                                        <img src="assets/images/location.svg" width="21" height="11" alt="">
                                     </span>
                                     NAIL SALON HEREFORD TEXAS
                                 </div>
@@ -358,7 +369,7 @@
                         </div>
                         <div class="charts-2__inner">
                             <div class="charts-2__avatar">
-                                <img src="./img/img-1.svg" width="56" height="56" alt="">
+                                <img src="assets/images/img-1.svg" width="56" height="56" alt="">
                             </div>
                             <div class="charts-2__heading">
                                 <div class="charts-2__title">
@@ -366,7 +377,7 @@
                                 </div>
                                 <div class="charts-2__address">
                                     <span class="charts-2__location">
-                                        <img src="./img/location.svg" width="21" height="11" alt="">
+                                        <img src="assets/images/location.svg" width="21" height="11" alt="">
                                     </span>
                                     NAIL SALON HEREFORD TEXAS
                                 </div>
@@ -375,6 +386,32 @@
                         <div class="charts-2__point">
                             600 ponit
                         </div>
+                    </div>
+                    <div class="charts-list__total">
+                        <div class="charts-list-2__title d-none d-md-flex">
+                            Total 100 stylist
+                        </div>
+                        <ul class="section-pagination pagination">
+                            <li class="page-item disabled">
+                                <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none">
+                                        <path d="M7.54504 2.03996L4.28504 5.29996C3.90004 5.68496 3.90004 6.31496 4.28504 6.69996L7.54504 9.95996" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item active" aria-current="page">
+                                <a class="page-link" href="#">2</a>
+                            </li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item">
+                                <a class="page-link" href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12">
+                                        <path d="M4.45496 9.96004L7.71496 6.70004C8.09996 6.31504 8.09996 5.68504 7.71496 5.30004L4.45496 2.04004" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
@@ -386,7 +423,7 @@
 </main>
 
 
-<script src="lib/bootstrap5/bootstrap.bundle.min.js"></script>
-<script src="js/style.js"></script>
+<script src="assets/plugins/bootstrap5/bootstrap.bundle.min.js"></script>
+<script src="assets/js/style.js"></script>
 </body>
 </html>
