--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             </div>
                             <div class="table-column__header">
                                 <div class="header-avatar">
-                                    <img src="assets/images/img-1.svg" width="64" height="64" alt="Avatar">
+                                    <img src="assets/images/img-2.svg" width="64" height="64" alt="Avatar">
                                     <div class="header-cup">
                                         <img src="assets/images/cup-bac.svg" width="50" height="42" alt="">
                                     </div>
@@ -120,7 +120,7 @@
                         <div class="achievement-table__three achievement-table__column position-relative ">
                             <div class="table-column__header">
                                 <div class="header-avatar">
-                                    <img src="assets/images/img-1.svg" width="64" height="64" alt="Avatar">
+                                    <img src="assets/images/imga-3.svg" width="64" height="64" alt="Avatar">
                                     <div class="header-avatar__decor">
                                         <img src="assets/images/sunshine.png" class="decor-1" width="288" height="238" alt="">
                                         <img src="assets/images/star.gif" class="decor-2" width="500" height="225" alt="">
@@ -164,7 +164,7 @@
                             </div>
                             <div class="table-column__header">
                                 <div class="header-avatar">
-                                    <img src="assets/images/img-1.svg" width="64" height="64" alt="Avatar">
+                                    <img src="assets/images/image-4.svg" width="64" height="64" alt="Avatar">
                                     <div class="header-cup">
                                         <img src="assets/images/cup-dong.svg" width="50" height="42" alt="">
                                     </div>
@@ -360,16 +360,64 @@
                             </div>
                         </div>
                         <div class="charts-2__point">
-                            600 ponit
+                            1.000 <span class="ms-1">point</span>
                         </div>
                     </div>
                     <div class="charts-item-2">
                         <div class="charts-2__number">
-                            1
+                            2
                         </div>
                         <div class="charts-2__inner">
                             <div class="charts-2__avatar">
-                                <img src="assets/images/img-1.svg" width="56" height="56" alt="">
+                                <img src="assets/images/img-2.svg" width="56" height="56" alt="">
+                            </div>
+                            <div class="charts-2__heading">
+                                <div class="charts-2__title">
+                                    Jordyn Ekstrom Bothman
+                                </div>
+                                <div class="charts-2__address">
+                                    <span class="charts-2__location">
+                                        <img src="assets/images/location.svg" width="21" height="11" alt="">
+                                    </span>
+                                    NAIL SALON HEREFORD TEXAS
+                                </div>
+                            </div>
+                        </div>
+                        <div class="charts-2__point">
+                            900 <span class="ms-1">point</span>
+                        </div>
+                    </div>
+                    <div class="charts-item-2">
+                        <div class="charts-2__number">
+                            3
+                        </div>
+                        <div class="charts-2__inner">
+                            <div class="charts-2__avatar">
+                                <img src="assets/images/img-2.svg" width="56" height="56" alt="">
+                            </div>
+                            <div class="charts-2__heading">
+                                <div class="charts-2__title">
+                                    Kianna Vaccaro
+                                </div>
+                                <div class="charts-2__address">
+                                    <span class="charts-2__location">
+                                        <img src="assets/images/location.svg" width="21" height="11" alt="">
+                                    </span>
+                                    NAIL SALON HEREFORD TEXAS
+                                </div>
+                            </div>
+                        </div>
+                        <div class="charts-2__point">
+                            800 <span class="ms-1">point</span>
+                        </div>
+                    </div>
+                    <div class="charts-item-2">
+                        <div class="charts-2__number">
+                            4
+                        </div>
+                        <div class="charts-2__inner">
+                            <div class="charts-2__avatar">
+                                <img src="assets/images/img-2.svg" width="56" height="56" alt="">
                             </div>
                             <div class="charts-2__heading">
                                 <div class="charts-2__title">
@@ -384,7 +432,31 @@
                             </div>
                         </div>
                         <div class="charts-2__point">
-                            600 ponit
+                            700 <span class="ms-1">point</span>
+                        </div>
+                    </div>
+                    <div class="charts-item-2">
+                        <div class="charts-2__number">
+                            5
+                        </div>
+                        <div class="charts-2__inner">
+                            <div class="charts-2__avatar">
+                                <img src="assets/images/img-2.svg" width="56" height="56" alt="">
+                            </div>
+                            <div class="charts-2__heading">
+                                <div class="charts-2__title">
+                                    Makenna Siphron
+                                </div>
+                                <div class="charts-2__address">
+                                    <span class="charts-2__location">
+                                        <img src="assets/images/location.svg" width="21" height="11" alt="">
+                                    </span>
+                                    NAIL SALON HEREFORD TEXAS
+                                </div>
+                            </div>
+                        </div>
+                        <div class="charts-2__point">
+                            600 <span class="ms-1">point</span>
                         </div>
                     </div>
                     <div class="charts-list__total">
