--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <main class="wrapper-achievement">
-    <div class="container">
-        <img src="assets/images/bg-game.png" class="bg-achievement" width="500px" height="500px" alt="">
+    <div class="container h-100 vstack flex-xl-column flex-row align-items-center justify-content-center">
+        <img src="assets/images/bg-game.png" class="bg-achievement" width="1920" class="img-fluid" height="911" alt="">
         <div class="section-achievement">
             <div class="section-achievement__item">
                 <div class="section-achievement__heading">
@@ -52,12 +52,12 @@
                                     <img src="assets/images/img-1.svg" width="64" height="64" alt="Avatar">
                                 </div>
                                 <div class="header-heading">
-                            <span class="name">
-                                 Ann Gouse
-                            </span>
+                                    <span class="name">
+                                        Ann Gouse
+                                    </span>
                                     <span class="point">
-                                700 Point
-                            </span>
+                                        700 Point
+                                    </span>
                                 </div>
                             </div>
                             <div class="table-column__column">
@@ -90,12 +90,12 @@
                                     </div>
                                 </div>
                                 <div class="header-heading">
-                            <span class="name">
-                                 Haylie Geidt
-                            </span>
+                                    <span class="name">
+                                        Haylie Geidt
+                                    </span>
                                     <span class="point">
-                                900 Point
-                            </span>
+                                        900 Point
+                                    </span>
                                 </div>
                             </div>
                             <div class="table-column__column">
@@ -122,21 +122,24 @@
                                 <div class="header-avatar">
                                     <img src="assets/images/imga-3.svg" width="64" height="64" alt="Avatar">
                                     <div class="header-avatar__decor">
-                                        <img src="assets/images/sunshine.png" class="decor-1" width="288" height="238" alt="">
-                                        <img src="assets/images/star.gif" class="decor-2" width="500" height="225" alt="">
-                                        <img src="assets/images/star.gif" class="decor-3" width="500" height="225" alt="">
+                                        <img src="assets/images/sunshine.png" class="decor-1" width="288" height="238"
+                                             alt="">
+                                        <img src="assets/images/star.gif" class="decor-2" width="500" height="225"
+                                             alt="">
+                                        <img src="assets/images/star.gif" class="decor-3" width="500" height="225"
+                                             alt="">
                                     </div>
                                     <div class="header-cup">
                                         <img src="assets/images/cup-vang.svg" width="50" height="42" alt="">
                                     </div>
                                 </div>
                                 <div class="header-heading">
-                            <span class="name">
-                                Kaiya Curtis
-                            </span>
+                                    <span class="name">
+                                        Kaiya Curtis
+                                    </span>
                                     <span class="point">
-                                1.000 Point
-                            </span>
+                                        1.000 Point
+                                    </span>
                                 </div>
                             </div>
                             <div class="table-column__column">
@@ -170,12 +173,12 @@
                                     </div>
                                 </div>
                                 <div class="header-heading">
-                            <span class="name">
-                                 Ann Mango
-                            </span>
+                                    <span class="name">
+                                        Ann Mango
+                                    </span>
                                     <span class="point">
-                                800 Point
-                            </span>
+                                        800 Point
+                                    </span>
                                 </div>
                             </div>
                             <div class="table-column__column">
@@ -206,12 +209,12 @@
                                     <img src="assets/images/img-1.svg" width="64" height="64" alt="Avatar">
                                 </div>
                                 <div class="header-heading">
-                            <span class="name">
-                                 Ann Gouse
-                            </span>
+                                    <span class="name">
+                                        Ann Gouse
+                                    </span>
                                     <span class="point">
-                                800 Point
-                            </span>
+                                        800 Point
+                                    </span>
                                 </div>
                             </div>
                             <div class="table-column__column">
@@ -254,7 +257,8 @@
                                     </div>
                                 </div>
                                 <div class="chart-item__cup">
-                                    <img src="assets/images/cup-vang.svg" class="image-cup" height="42" width="50" alt="">
+                                    <img src="assets/images/cup-vang.svg" class="image-cup" height="42" width="50"
+                                         alt="">
                                 </div>
                                 <img src="assets/images/phaohoa.svg" class="image-decor" height="80" width="92" alt="">
                             </div>
@@ -273,7 +277,8 @@
                                     </div>
                                 </div>
                                 <div class="chart-item__cup">
-                                    <img src="assets/images/cup-bac.svg" class="image-cup" height="42" width="50" alt="">
+                                    <img src="assets/images/cup-bac.svg" class="image-cup" height="42" width="50"
+                                         alt="">
                                 </div>
                             </div>
                             <div class="charts-item">
@@ -291,7 +296,8 @@
                                     </div>
                                 </div>
                                 <div class="chart-item__cup">
-                                    <img src="assets/images/cup-dong.svg" class="image-cup" height="42" width="50" alt="">
+                                    <img src="assets/images/cup-dong.svg" class="image-cup" height="42" width="50"
+                                         alt="">
                                 </div>
                             </div>
                             <div class="charts-item">
@@ -344,9 +350,9 @@
                             1
                         </div>
                         <div class="charts-2__inner">
-                             <div class="charts-2__avatar">
-                                    <img src="assets/images/img-1.svg" width="56" height="56" alt="">
-                             </div>
+                            <div class="charts-2__avatar">
+                                <img src="assets/images/img-1.svg" width="56" height="56" alt="">
+                            </div>
                             <div class="charts-2__heading">
                                 <div class="charts-2__title">
                                     Makenna Siphron
@@ -466,8 +472,11 @@
                         <ul class="section-pagination pagination">
                             <li class="page-item disabled">
                                 <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none">
-                                        <path d="M7.54504 2.03996L4.28504 5.29996C3.90004 5.68496 3.90004 6.31496 4.28504 6.69996L7.54504 9.95996" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"
+                                         fill="none">
+                                        <path d="M7.54504 2.03996L4.28504 5.29996C3.90004 5.68496 3.90004 6.31496 4.28504 6.69996L7.54504 9.95996"
+                                              stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                              stroke-linejoin="round"/>
                                     </svg>
                                 </a>
                             </li>
@@ -479,7 +488,9 @@
                             <li class="page-item">
                                 <a class="page-link" href="#">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12">
-                                        <path d="M4.45496 9.96004L7.71496 6.70004C8.09996 6.31504 8.09996 5.68504 7.71496 5.30004L4.45496 2.04004" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M4.45496 9.96004L7.71496 6.70004C8.09996 6.31504 8.09996 5.68504 7.71496 5.30004L4.45496 2.04004"
+                                              stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                              stroke-linejoin="round"/>
                                     </svg>
                                 </a>
                             </li>
@@ -491,7 +502,6 @@
 
         </div>
     </div>
-
 </main>
 
 
